@@ -1,8 +1,8 @@
 OS_USERNAME = "admin"
-OS_PASSWORD = "nova"
+OS_PASSWORD = "password"
 OS_TENANT_NAME = "admin"
-OS_AUTH_URL = "http://172.18.79.139:35357/v2.0/"
-SAVANNA_HOST = '172.18.79.214'
+OS_AUTH_URL = "http://172.18.78.117:5000/v2.0/"
+SAVANNA_HOST = '172.18.78.117'
 SAVANNA_PORT = '8080'
 #SAVANNA_IMAGE_ID = '7ba73c45-49ff-442f-b337-f731057308e6'
-SAVANNA_IMAGE_ID = '51f58f73-a1a5-4145-8ae4-5b7b3813f8de'
+SAVANNA_IMAGE_ID = 'cc051c41-0926-4b2b-9830-6e847bae8c26'
